- column `answers.text` should be `MEDIUMTEXT` in mysql

  This is done during migration, and should make sure

  old data isn't lost.

  See branch `dmponline4_upgrade_step2_ugent`, migration file

  `20161122152339_new_plan_template_structure.rb`

- app/assets/images/favicon.ico

  overrides upstream version

  make sure to keep this one while merging with upstream repo

- app/views/branded/org_admin/questions/_show.html.erb

  overrides app/views/org_admin/questions/_show.html.erb

  preliminary fix for PR https://github.com/DMPRoadmap/roadmap/pull/3173

  to be removed when PR is merged

- app/views/branded/phases/_edit_plan_answers.html.erb

  overrides app/views/phases/_edit_plan_answers.html.erb

  preliminary fix for PR https://github.com/DMPRoadmap/roadmap/pull/3184

  to be removed when PR is merged

- app/views/branded/research_outputs/metadata_standards/_search_result.html.erb

  overrides app/views/research_outputs/metadata_standards/_search_result.html.erb

  preliminary fix for PR https://github.com/DMPRoadmap/roadmap/pull/3171

  to be removed when PR is merged

- app/views/branded/plans/_project_details.html.erb

  overrides app/views/plans/_project_details.html.erb

  changes:

  - variable content "id_tooltip"

- app/views/branded/public_pages/template_index.html.erb

  overrides app/views/public_pages/template_index.html.erb

  changes title and description above table of funder templates

  adds, if logged in, an extra table with templates for your organisation

- app/views/branded/static_pages/about_us.html.erb

  overrides app/views/static_pages/about_us.html.erb

- app/views/branded/static_pages/help.html.erb

  overrides app/views/static_pages/help.html.erb

- app/views/branded/shared/export/_plan_coversheet.erb

  overrides app/views/shared/export/_plan_coversheet.erb

  changes:

  * show all contributor roles
  * remove unclear line "ID's" (orcid ids) that does not show
    who these id's belong to
